--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1930,7 +1930,7 @@
     <string name='Q_f8407'>f8407</string>
     <string name='Q_f8408'>f8408</string>
     <string name='Q_f8409'>f8409</string>
-    <string name='Q_f8410t1'>f8410t1</string>
+    <string name='Q_f8410'>f8410</string>
     <string name='Q_f8411'>f8411</string>
     <string name='Q_f8501'>f8501</string>
     <string name='Q_f8502'>f8502</string>
@@ -1941,7 +1941,7 @@
     <string name='Q_f8507'>f8507</string>
     <string name='Q_f8508'>f8508</string>
     <string name='Q_f8509'>f8509</string>
-    <string name='Q_f8510t1'>f8510t1</string>
+    <string name='Q_f8510'>f8510</string>
     <string name='Q_f8511'>f8511</string>
     <string name='Q_f8601'>f8601</string>
     <string name='Q_f8602'>f8602</string>
@@ -1952,7 +1952,7 @@
     <string name='Q_f8607'>f8607</string>
     <string name='Q_f8608'>f8608</string>
     <string name='Q_f8609'>f8609</string>
-    <string name='Q_f8610t1'>f8610t1</string>
+    <string name='Q_f8610'>f8610</string>
     <string name='Q_f8611'>f8611</string>
     <string name='Q_f8701'>f8701</string>
     <string name='Q_f8702'>f8702</string>
@@ -1963,7 +1963,7 @@
     <string name='Q_f8707'>f8707</string>
     <string name='Q_f8708'>f8708</string>
     <string name='Q_f8709'>f8709</string>
-    <string name='Q_f8710t1'>f8710t1</string>
+    <string name='Q_f8710'>f8710</string>
     <string name='Q_f8711'>f8711</string>
     <string name='Q_f8s1title'>f8s1title</string>
     <string name='Q_f8s2title'>f8s2title</string>
