--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="btnDownload" translatable="false">Download Data</string>
     <string name="options">Options</string>
     <string name="action_database">Database Manager</string>
     <string name="action_data_sync">Sync Data</string>
