adjusted form flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="btnLogin">Login</string>
     <string name="country">Language (Click to change)</string>
     <string name="downData">Download Data</string>
-    <string name="open_household_form">OPEN HOUSEHOLD FORM</string>
+    <string name="open_household_form">OPEN NEW FORM</string>
     <string name="download_data">Download Data</string>
     <string name="upload_data">Upload Data</string>
     <string name="folder_not_created"> Folder Not Created </string>
