--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="country">Language (Click to change)</string>
     <string name="downData">Download Data</string>
     <string name="open_household_form">Facility and Community Screening</string>
+    <string name="open_discharge_form">Session Evaluation Before Discharge</string>
     <string name="download_data">Download Data</string>
     <string name="upload_data">Upload Data</string>
     <string name="folder_not_created"> Folder Not Created </string>
