--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
     <string name="invalid_password"> Invalid Password </string>
     <string name="username_required"> Username is required. </string>
     <string name="incorrect_username_or_password">Incorrect Username or Password</string>
+    <string name="oldPassword" translatable="false">Old Password</string>
+    <string name="newPassword" translatable="false">New Password</string>
     <string name="confirmPassword" translatable="false">Confirm Password</string>
+    <string name="username_password_same" translatable="false"> Username and Password cannot be same. </string>
     <string name="btnResetPassword">Reset Password</string>
     <string name="btnSync">Download Data</string>
     <string name="btnUpload">Upload Data</string>
